styles/single-choice-set.css
.h5p-theme .h5p-sc-set .h5p-question-introduction {
  font-weight: 600; /* Override H5P.Question */
}

.h5p-single-choice-set .h5p-sc-question {
  width: 100%;
}

.h5p-container.h5p-single-choice-set {
  overflow: hidden;
}

.h5p-single-choice-set .h5p-question-introduction {
  margin-left: 0 !important;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-right: 0;
}

.h5p-container .h5p-sc-set ul {
  margin: 0;
}

.h5p-sc-set-wrapper.initialized {
  overflow-x: hidden;
  overflow-y: auto;
  -ms-scroll-limit: 0 0 0 0; /* IE11 bugfix for where this element can be out of line, when focusing on elements. */
  height: 100%;
}

.h5p-sc-set {
  height: 100%;
  padding: 0.5em;
  margin-inline: var(--h5p-theme-spacing-m);
  position: relative;
  box-sizing: border-box;
  margin-bottom: var(--h5p-theme-spacing-m);
}

.h5p-sc-set:has(.h5p-sc-current-slide.h5p-sc-set-results) {
  margin-inline: 0;
}

.h5p-no-frame .h5p-theme.h5p-single-choice-set.h5p-standalone .h5p-sc-set {
  padding: 0;
  margin: 0;
}

.h5p-single-choice-set .h5p-joubelui-progressbar {
  position: relative;
  z-index: 1;
}

.h5p-single-choice-set .h5p-joubelui-progressbar-background {
  background-color: var(--h5p-theme-contrast-cta-white);
  height: 7px;
  margin: 3px 3px 0 3px;
  border-radius: 5px;
  transition: width 1s;
}

.h5p-sc-set.h5p-sc-animate {
  transition: -webkit-transform 0.25s ease-in-out;
  transition: transform 0.25s ease-in-out;
}

.h5p-sc {
  box-sizing: border-box;
  width: 100%;
  height: auto;
  position: absolute;
  left: 0;
  top: 0;
}

.initialized .h5p-sc-slide {
  display: none;
}

.initialized .h5p-sc-slide.h5p-sc-current-slide {
  display: block;
}

ul.h5p-sc-alternatives {
  margin: 0;
  padding: 0;
}

ul.h5p-sc-alternatives li.h5p-sc-alternative {
  position: relative;
  cursor: pointer;
  box-sizing: border-box;
  list-style: none;
  overflow: hidden;
  transition: -webkit-transform 0.5s ease-in-out, width 0.5s ease-in-out;
  transition: transform 0.5s ease-in-out, width 0.5s ease-in-out;
  padding: var(--h5p-theme-spacing-xs) var(--h5p-theme-spacing-s);
  margin: var(--h5p-theme-spacing-xxs) 0;
  background: var(--h5p-theme-alternative-base);
  border-radius: var(--h5p-theme-border-radius-medium);
  border: 1px solid var(--h5p-theme-alternative-base);
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
  text-align: left;
  line-height: var(--h5p-theme-font-size-xxl);
  color: var(--h5p-theme-text-secondary);
  font-size: var(--h5p-theme-font-size-m);
  font-weight: 600;
}
.h5p-sc-alternatives li.h5p-sc-alternative:last-child {
  margin-bottom: 0;
}

ul.h5p-sc-alternatives li.h5p-sc-alternative:hover {
  cursor: pointer;
  filter: none;
  border-color: transparent;
  background-color: var(--h5p-theme-alternative-dark);
}

ul.h5p-sc-alternatives.h5p-sc-selected li.h5p-sc-alternative,
ul.h5p-sc-alternatives.h5p-sc-selected li.h5p-sc-alternative:hover,
ul.h5p-sc-alternatives.h5p-sc-selected li.h5p-sc-alternative:active,
ul.h5p-sc-alternatives.h5p-sc-selected li.h5p-sc-alternative:focus-visible,
ul.h5p-sc-alternatives.h5p-sc-selected li.h5p-sc-alternative.h5p-sc-reveal-wrong:hover,
ul.h5p-sc-alternatives.h5p-sc-selected li.h5p-sc-alternative.h5p-sc-reveal-wrong:active,
ul.h5p-sc-alternatives.h5p-sc-selected li.h5p-sc-alternative.h5p-sc-reveal-wrong:focus-visible {
  background: var(--h5p-theme-alternative-base);
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}

ul.h5p-sc-alternatives.h5p-sc-selected li.h5p-sc-alternative.h5p-sc-reveal-correct,
ul.h5p-sc-alternatives.h5p-sc-selected li.h5p-sc-alternative.h5p-sc-reveal-correct:hover,
ul.h5p-sc-alternatives.h5p-sc-selected li.h5p-sc-alternative.h5p-sc-reveal-correct:active,
ul.h5p-sc-alternatives.h5p-sc-selected li.h5p-sc-alternative.h5p-sc-reveal-correct:focus-visible {
  background: var(--h5p-theme-feedback-correct-secondary);
  color: var(--h5p-theme-feedback-correct-main);
  border-color: var(h5p-theme-feedback-correct-third);
}

ul.h5p-sc-alternatives li.h5p-sc-alternative.h5p-sc-is-correct.h5p-sc-selected.h5p-sc-reveal-correct .h5p-sc-progressbar {
  background: var(--h5p-theme-feedback-correct-secondary);
  color: var(--h5p-theme-feedback-correct-main);
  border-color: var(h5p-theme-feedback-correct-third);
}

ul.h5p-sc-alternatives li.h5p-sc-alternative.h5p-sc-reveal-wrong {
  -webkit-transform: scale(.95);
  transform: scale(.95);
}

ul.h5p-sc-alternatives.h5p-sc-selected li.h5p-sc-alternative.h5p-sc-reveal-wrong.h5p-sc-selected,
ul.h5p-sc-alternatives.h5p-sc-selected li.h5p-sc-alternative.h5p-sc-reveal-wrong.h5p-sc-selected:hover,
ul.h5p-sc-alternatives.h5p-sc-selected li.h5p-sc-alternative.h5p-sc-reveal-wrong.h5p-sc-selected:active,
ul.h5p-sc-alternatives.h5p-sc-selected li.h5p-sc-alternative.h5p-sc-reveal-wrong.h5p-sc-selected:focus-visible,
ul.h5p-sc-alternatives.h5p-sc-selected li.h5p-sc-alternative.h5p-sc-is-wrong.h5p-sc-selected.h5p-sc-reveal-wrong .h5p-sc-progressbar {
  background: var(--h5p-theme-feedback-incorrect-secondary);
  color: var(--h5p-theme-feedback-incorrect-main);
  border-color: var(--h5p-theme-feedback-incorrect-third);
}

li.h5p-sc-alternative .h5p-sc-progressbar {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 0%;
  background: var(--h5p-theme-alternative-darker);
  -webkit-border-radius: var(--h5p-theme-border-radius-medium);
  -moz-border-radius: var(--h5p-theme-border-radius-medium);
  border-radius: var(--h5p-theme-border-radius-medium);
}
.h5p-sc-drummed .h5p-sc-progressbar {
  background: transparent;
  transition: background 1s;
}

/* Using animation instead of transition on width made this much
   smoother on iPad */
li.h5p-sc-alternative.h5p-sc-selected .h5p-sc-progressbar {
  -webkit-animation: progress 0.6s;
  -moz-animation: progress 0.6s;
  -o-animation: progress 0.6s;
  animation: progress 0.6s;

  -webkit-animation-fill-mode: forwards;
  -moz-animation-fill-mode: forwards;
  -o-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
}

@-webkit-keyframes progress {
  from { } to { width: 100% }
}

@-moz-keyframes progress {
  from { } to { width: 100% }
}

@-ms-keyframes progress {
  from { } to { width: 100% }
}

@keyframes progress {
    from { } to { width: 100% }
}

li.h5p-sc-alternative .h5p-sc-label {
  position: relative;
}

li.h5p-sc-alternative .h5p-sc-label p {
  margin: 0.75em 0;
}

li.h5p-sc-alternative .h5p-sc-label p:first-child {
   margin-top: 0;
}

li.h5p-sc-alternative .h5p-sc-label p:last-child {
   margin-bottom: 0;
}

li.h5p-sc-alternative .h5p-sc-status {
  font-family: 'h5p-theme';
  font-size: 1.5em;
  width: 1.5em;
  height: 1.5em;
  line-height: 1.5;
  position: absolute;
  top: 0;
  right: 0;
  text-align: center;
  align-self: anchor-center;
}

.h5p-sc-alternative.h5p-sc-is-correct.h5p-sc-drummed .h5p-sc-status:after {
  content: "\e903";
  color: var(--h5p-theme-feedback-correct-main);
}

.h5p-sc-alternative.h5p-sc-is-wrong.h5p-sc-drummed .h5p-sc-status:after {
  content: "\e902";
  color: var(--h5p-theme-feedback-incorrect-main);
}

.h5p-sc-alternative .h5p-sc-a11y {
  position:absolute;
  left:-10000px;
  top:auto;
  width:1px;
  height:1px;
  overflow:hidden;
}

.h5p-sc-selected li.h5p-sc-alternative {
  cursor: auto;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}

.h5p-sc-set-results {
  width: 100%;
  min-height: 100%;
  position: absolute;
  top: 0;
  text-align: center;
  box-sizing: border-box;
}

.h5p-sc-set-results .h5p-theme-results-question p {
  margin: 0;
}

.h5p-sc-set-results .h5p-theme-results-answer .h5p-theme-results-solution {
  font-weight: 600;
}

.h5p-sc-sound-control {
  width: 1.3em;
  height: 1.5em;
  text-align: left;
  color: var(--h5p-theme-text-secondary);
  cursor: pointer;
}

.h5p-sc-sound-control:hover {
  color: var(--h5p-theme-text-primary);
}

.h5p-sc-sound-control:after {
  display: inline-flex;
  align-items: center;
  height: 100%;

  font-family: 'h5p-theme';
  font-size: 1.25em;
  content: '\e91b';
}

[aria-pressed='true'].h5p-sc-sound-control:after {
  content: '\e91c';
}

/* Remove Question margin */
.h5p-single-choice-set .h5p-question-content {
  margin: 0;
  height: 100%;
  padding: 0;
}

.h5p-single-choice-set .h5p-sc-result-container {
  top: 50%;
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
  position: absolute;
  width: 100%;
}

.h5p-single-choice-set .h5p-sc-question p {
  font-size: 1em;
  margin: 0.75em 0;
}

.h5p-single-choice-set .h5p-sc-question p:first-child {
  margin-top: 0;
}

.h5p-single-choice-set .h5p-sc-question p:last-child {
  margin-bottom: 0;
}

.h5p-single-choice-set:not(:has(.showing-results)) .h5p-question-evaluation-container {
  display: none;
  padding: 0;
}

.h5p-single-choice-set:has(.evaluation-mode) .h5p-sc-sound-control,
.h5p-single-choice-set:has(.evaluation-mode) .h5p-sc-set-wrapper,
.h5p-single-choice-set:not(:has(.navigatable)) .h5p-navigation {
  display: none;
}

.h5p-single-choice-set .h5p-question-evaluation-container {
  padding-top: 0;
}

.h5p-single-choice-set .h5p-question-evaluation-container .h5p-question-buttons {
  text-align: center;
  margin-top: var(--h5p-theme-spacing-m);
  justify-content: center;
}

/* IV sepcific styles */
.h5p-interactive-video .h5p-dialog[data-lib="H5P.SingleChoiceSet"] {
  width: 24.5em;
  overflow: hidden;
  padding: 0;
}

.h5p-interactive-video .h5p-dialog[data-lib="H5P.SingleChoiceSet"] .h5p-sc-sound-control {
  top: -2.075em;
  right: 2em;
}

.h5p-interactive-video .h5p-dialog[data-lib="H5P.SingleChoiceSet"] .h5p-sc-sound-control:after {
  font-size: 1.075em;
}

.h5p-interactive-video .h5p-dialog[data-lib="H5P.SingleChoiceSet"] .h5p-sc-question {
  margin-right: 0;
}

.h5p-interactive-video.mobile .h5p-dialog[data-lib="H5P.SingleChoiceSet"] .h5p-dialog-interaction.h5p-single-choice-set {
  height: 100%;
}

/* Standalone specific styles */
.h5p-no-frame .h5p-standalone.h5p-single-choice-set .h5p-sc-alternatives,
.h5p-no-frame .h5p-standalone.h5p-single-choice-set .h5p-sc-question {
  margin: 1em 0;
}

.h5p-no-frame .h5p-standalone.h5p-single-choice-set .h5p-sc-question {
  margin-top: 0;
}

.h5p-no-frame .h5p-standalone.h5p-single-choice-set .h5p-sc-sound-control {
  top: 0;
}

/* Transparent specific styles */
.h5p-transparent > div > .h5p-single-choice-set .h5p-sc-alternatives,
.h5p-transparent > div > .h5p-single-choice-set .h5p-sc-question {
  margin-left: 0;
  margin-right: 0;
}

.h5p-transparent > div > .h5p-single-choice-set .h5p-sc-question {
  margin-top: 0;
}

.h5p-transparent > div > .h5p-single-choice-set .h5p-sc-sound-control {
  top: 0;
  right: 0;
}

/* CP popup specific style */
.h5p-course-presentation .h5p-popup-overlay.h5p-singlechoiceset .h5p-sc-sound-control {
  top: 0.6em;
  right: 3em;
  color: #000;
}

.h5p-course-presentation .h5p-popup-overlay.h5p-singlechoiceset .h5p-sc-sound-control:after {
  font-size: 1.8em;
}

.h5p-course-presentation .h5p-popup-overlay.h5p-singlechoiceset .h5p-sc-sound-control:hover {
  color: #555;
}

.h5p-course-presentation .h5p-popup-overlay.h5p-singlechoiceset .h5p-popup-container {
  min-height: initial;
  max-height: none;
}

